# librealsense

./: .gitmodules  CMakeLists.txt
CMake/: realsense.def
common/: model-views.cpp  model-views.h  rendering.h  zero_order_fix.cpp  zero_order_fix.h
common/fw/: CMakeLists.txt  firmware-version.h
examples/: CMakeLists.txt  example.hpp  example.hpp.rej  readme.md
examples/ar-basic/: rs-ar-basic.cpp
examples/capture/: rs-capture.cpp
examples/pose-change-origin/: CMakeLists.txt  rs-pose-change-origin.cpp
examples/pose-map/: CMakeLists.txt  rs-pose-map.cpp
examples/slam/: CMakeLists.txt  rs-large-area-mapping.cpp  rs-slam-trajectory.hpp  rs-slam.cpp
examples/tm2-calibration-write/: CMakeLists.txt  readme.md  rs-tm2-calibration-write.cpp
examples/trajectory-advanced/: CMakeLists.txt  readme.md  rs-trajectory-advanced.cpp
include/librealsense2/: rs.h  rsutil.h
include/librealsense2/h/: rs_device.h  rs_frame.h  rs_option.h  rs_processing.h  rs_sensor.h
include/librealsense2/hpp/: rs_device.hpp  rs_frame.hpp  rs_processing.hpp  rs_sensor.hpp
src/: archive.cpp  archive.h  device.cpp  image.cpp  realsense.def  rs.cpp  sensor.cpp  sync.cpp  types.cpp
src/core/: motion.h  streaming.h
src/ds5/: ds5-color.cpp  ds5-device.cpp  ds5-device.h  ds5-motion.cpp  ds5-options.cpp  ds5-options.h  ds5-private.cpp  ds5-private.h  ds5-timestamp.cpp
src/l500/: l500.cpp  l500.h
src/linux/: backend-v4l2.cpp
src/media/playback/: playback_device.cpp  playback_device.h
src/media/ros/: ros_file_format.h
src/mf/: mf-backend.cpp
src/proc/: CMakeLists.txt  align.cpp  pointcloud.cpp  rates-printer.cpp  synthetic-stream.cpp  synthetic-stream.h  zero-order.cpp  zero-order.h
src/rsusb-backend/: rsusb-backend.cpp
src/tm2/: t265-messages.h  tm-device.cpp  tm-device.h
tools/realsense-viewer/: CMakeLists.txt
wrappers/python/: pyrs_device.cpp  python.cpp
wrappers/python/examples/: aruco.py  opencv_viewer_example.py  t265_aruco.py  t265_calibration_rw.py
wrappers/python/examples/calibration/: calibration_utils.py  readme.md
wrappers/python/examples/t261_calibration/: poses_left.txt  poses_right.txt  readme.md  t261_calibrate.py  t261_calibration_rw.py  t265_calibration_rw.py
wrappers/python/examples/t261_calibration/test0/: cam0699_intrinsics.json  cam0837_intrinsics.json  cam1502_intrinsics.json  cam1536_intrinsics.json  cam1552_intrinsics.json
wrappers/python/examples/t261_calibration/test1/: cam0699_intrinsics.json  cam0837_intrinsics.json  cam1502_intrinsics.json  cam1536_intrinsics.json  cam1552_intrinsics.json
wrappers/python/examples/t261_calibration/test2/: cam0699_intrinsics.json  cam0837_intrinsics.json  cam1502_intrinsics.json  cam1536_intrinsics.json  cam1552_intrinsics.json
wrappers/python/examples/t265_calibration/: readme.md  t265_calibrate.py
